
2005-10-15		Florian Boor <florian.boor@kernelconcepts.de>

	* Makefile, po: Update Spanish translation, add Slovenian translation.

2005-10-09		Florian Boor <florian.boor@kernelconcepts.de>

	* prismstumbler.h: Update from prismstumbler CVS.
	* main.c: Send device on command befor detecting card.

2005-04-30		Florian Boor <florian.boor@kernelconcepts.de>
	
	* main.c: Removed obsolete header.
	
2005-04-06		Florian Boor <florian.boor@kernelconcepts.de>

	* Makefile: Add Kinyarwanda translation.

2005-03-06		Florian Boor <florian.boor@kernelconcepts.de>

	* Released Version 0.2.13
	* main.c: Fixed some icon display issues, improved signal strength display.
	          Fixed dhcp autodetection.
	* pixmaps/scan-off.png: New icon.
	* pixmaps/scan-on.png: Add bar for signal strength display.
	* gpe-aerial.desktop: Removed file, it is generated.
	* Makefile: Add installation of new icon, changed version.

2005-02-13		Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Add autodetection of dhcp client.
	          Set default size of window.

2005-02-02		Florian Boor <florian.boor@kernelconcepts.de>

	* po/vi.po, Makefile: Add Vietnamese translation.

2005-01-04		Florian Boor <florian.boor@kernelconcepts.de>

	* Released version 0.2.12
	* main.c: Changed pixmaps to load.
	* pixmaps/scan-on.png: New pixmap. increased size.
	* Makefile: Updated pixmap files to use.
	* Added new translations.
	* prismstumbler.h: Updated from prismstumbler 0.7.3.
	* main.c: Fixed window resizing. Still missing: Larger pixmaps.
	* Makefile: New version: 0.2.12

2005-01-01  Luc Pionchon  <luc@handhelds.org>

	* netedit.c (network_info): removed markup from i18n'ed strings

2004-07-05		Florian Boor <florian.boor@kernelconcepts.de>
	* Makefile: New version: 0.2.11
	* main.c: Added resizing of icon.

2004-06-21		Florian Boor <florian.boor@kernelconcepts.de>
	* Makefile: Added Spanish translation. Thanks to J.Manrique.

2004-06-11		Florian Boor <florian.boor@kernelconcepts.de>